[package]
name = "dupfinder-tg"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.52", features = ["derive", "env"] }
config = "0.15.19"
dotenvy = "0.15.7"
image = { version = "0.23" }
img_hash = "3.2.0"
indicatif = { version = "0.18.3", features = ["tokio"] }
mime = "0.3.17"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid"] }
teloxide = { version = "0.17.0", default-features = false, features = ["macros", "rustls", "ctrlc_handler"] }
thiserror = "2.0.17"
tokio = { version = "1.48", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
